# xcp-protocol-old

./: CMakeLists.txt  strconv.idl
include/: xcp.h
src/: client.c  dispatch.c  interface.c  internal.h  misc.c  mutex_pthread.c  mutex_win32.c  server.c
src/idl/: main.cpp
src/test-client/: main.c  strconv_c.c
src/test-server/: main.c  strconv.c  strconv.h  strconv_s.c
